<resources>
    <string name="app_name">Prueba putos colores</string>
    <string name="coordenadas">X: 0, Y: 0</string>
    <string name="color">Color Hex:  Color RGB:</string>
    <string name="muestra">Original:</string>
    <string name="triada1">Color Triada 1:</string>
    <string name="triada2">Color Triada 2:</string>
    <string name="color1">Color 1:</string>
    <string name="color2">Color 2:</string>
    <string name="color3">Color 3:</string>
    <string name="color4">Color 4:</string>
    <string name="complementario">Color complementario:</string>
    <string name="title_activity_triada">TriadaActivity</string>
    <string name="title_activity_analoga">AnalogaActivity</string>
    <string name="title_activity_complementaria">ComplementariaActivity</string>
    <string name="title_activity_complementaria_por_separado">ComplementariaPorSeparadoActivity</string>
    <string name="title_activity_tetrada">TetradaActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
